<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/tally_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tally_desc"
        android:maxLength="10"/>

    <EditText
        android:id="@+id/tally_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tally_amount"
        android:inputType="numberDecimal" />

    <Spinner
        android:id="@+id/tally_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"></Spinner>

    <Button
        android:id="@+id/tally_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />
</LinearLayout>