<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_search_month"
                android:layout_width="220dp"
                android:layout_height="30dp"
                android:layout_marginRight="30dp"
                android:background="@android:color/holo_blue_light"
                android:gravity="center"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btn_search"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@android:color/holo_blue_light"
                android:text="@string/search" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:text="@string/expend" />

            <TextView
                android:id="@+id/month_expend"
                android:layout_width="65dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:text="@string/income" />

            <TextView
                android:id="@+id/month_income"
                android:layout_width="65dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:text="@string/balance"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/month_balance"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.39999998dip"
            android:layout_alignParentBottom="true"
            android:background="@android:color/holo_purple"
            android:paddingBottom="2dp" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/piechart"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp" />

        <ListView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/share_list_view"
            android:layout_width="match_parent"
            android:layout_height="500dp"></ListView>

    </LinearLayout>
</ScrollView>
